--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,21 @@
     <div class="head_rules_holdem">техасского холдема</div>
     <div class="preface_to_head">научитесь играть в то,<br>что вы видели только в фильмах</div>
 
+    <div class="container_definition">
+        <div class="definition_texas_holdem">
+            Техасский холдем (или просто холдем) — 
+            разновидность покера, где каждому игроку раздают две закрытые карты 
+            («карманные»). На стол выкладывают ещё пять общих карт, которыми могут 
+            пользоваться все игроки. 
+        </div>
+    
+        <div class="purpose_holdem">
+            Цель — составить лучшую покерную комбинацию 
+            из пяти карт, используя свои карты и общие карты
+        </div>
+    </div>
+
+
     
 </body>
 </html>
