--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,26 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Холдем</title>
+    <link rel="icon" href="/frontend/image/icon_title.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="text_rules">ПРАВИЛА</div>
     <div class="head_rules_holdem">техасского холдема</div>
-    <div class="preface_to_head">научитесь играть в то,<br>что вы видели только в фильмах</div>
+    <div class="preface_to_head">научитесь играть в то, <br>что вы видели только в фильмах</div>
 
     <div class="container_definition">
         <div class="definition_texas_holdem">
             Техасский холдем (или просто холдем) — 
             разновидность покера, где каждому игроку раздают две закрытые карты 
             («карманные»). На стол выкладывают ещё пять общих карт, которыми могут 
-            пользоваться все игроки. 
+            пользоваться все игроки
         </div>
     
         <div class="purpose_holdem">
             Цель — составить лучшую покерную комбинацию 
             из пяти карт, используя свои карты и общие карты
         </div>
+
+        <div class="text_poker_combination">↓ комбинации покера ↓</div>
+
+        <div class="image_poker_combination"></div>
     </div>
 
 
