--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,9 @@
 
         <div class="text_poker_combination">↓ комбинации покера ↓</div>
 
-        <div class="image_poker_combination"></div>
+        <div class="image_poker_combination">
+            <img src="/frontend/image/combination_poker.png" alt="покерные_комбинации">
+        </div>
     </div>
 
 
