--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
         <div class="text_poker_combination">↓ комбинации покера ↓</div>
 
         <div class="image_poker_combination">
-            <img src="/frontend/image/icon_title.ico" alt="покерные_комбинации">
+            <img src="http://127.0.0.1:5500/frontend/image/combination_poker.png" alt="покерные_комбинации">
         </div>
     </div>
 
