--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,6 +31,23 @@
         <div class="image_poker_combination">
             <img src="image/combination_poker.png" alt="покерные_комбинации">
         </div>
+
+        <div class="definition_rules_texas_holdem">
+            При столкновении двух комбинаций выигрывает та, которая стоит выше в этом списке<br>
+            <br>Если лучшие комбинации у двух игроков совпадают, банк делится поровну между ними (сплит-пот)
+        </div>
+
+        <div class="text_poker_combination">ход игры</div>
+
+        <div class="definition_rules_texas_holdem_position">
+            <div class="definition_rules_texas_holdem">1. Префлоп — первый раунд торговли, игроки по очереди делают ходы, начиная с того, кто сидит слева от большого блайнда. Варианты действий: сбросить карты (фолд), уравнять ставку (колл), повысить ставку (рейз)</div>
+            <div class="definition_rules_texas_holdem">2. Флоп — на стол выкладывают три открытые карты, начинается второй раунд торговли</div>
+            <div class="definition_rules_texas_holdem">3. Тёрн — открывается четвёртая общая карта, следует третий раунд торговли</div>
+            <div class="definition_rules_texas_holdem">4. Ривер — на стол кладут пятую, последнюю общую карту, начинается финальный раунд торговли</div>
+            <div class="definition_rules_texas_holdem">5. Шоудаун — если после всех ставок в игре остаются 2 и более игроков, они вскрывают карты. Побеждает игрок с лучшими 5 картами, собранными из 7 возможных: 2 свои + 5 общих</div>
+        </div>
+
+        
     </div>
 
 
